[gd_scene load_steps=8 format=3 uid="uid://ch5cljfb6g2h0"]

[ext_resource type="Texture2D" uid="uid://2djvqf4q2flj" path="res://art/UI/logo_Talk_blinking.png" id="1_8vu8u"]
[ext_resource type="Script" path="res://scenes/splash_screen/splash_screen.gd" id="1_eo4qq"]
[ext_resource type="Texture2D" uid="uid://dktp1k8m5kg4r" path="res://art/UI/godotLogoText_justText.png" id="2_84nkt"]

[sub_resource type="Animation" id="Animation_jj3gk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/LogoText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/LogoText:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/VBoxContainer/LogoText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 123)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -47)]
}

[sub_resource type="Animation" id="Animation_fyccp"]
resource_name = "start_logo"
length = 2.0
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.495),
"transitions": PackedFloat32Array(1, 2.46229),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/LogoText:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.52, 0.925),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.495),
"transitions": PackedFloat32Array(1, 1.51572),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/LogoText:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.49, 0.975),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/VBoxContainer/LogoText:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.495, 0.975, 1.1, 1.205),
"transitions": PackedFloat32Array(1, 1, 2.2974, 2.14354),
"update": 0,
"values": [Vector2(-6, 123), Vector2(-6, 123), Vector2(-6, 80), Vector2(-6, 87)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterContainer/VBoxContainer/LogoBlinkSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.11, 1.125, 1.245),
"transitions": PackedFloat32Array(1, 4.28709, 3.73213),
"update": 0,
"values": [Vector2(-1, -47), Vector2(-1, -55), Vector2(-1, -47)]
}

[sub_resource type="Animation" id="Animation_3tepn"]
resource_name = "blink_logo"
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dclte"]
_data = {
"RESET": SubResource("Animation_jj3gk"),
"blink_logo": SubResource("Animation_3tepn"),
"start_logo": SubResource("Animation_fyccp")
}

[node name="SplashScreen" type="Node"]
script = ExtResource("1_eo4qq")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dclte")
}

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.607843, 0.298039, 0.639216, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LogoBlinkSprite" type="Sprite2D" parent="CenterContainer/VBoxContainer"]
position = Vector2(-1, -47)
scale = Vector2(4, 4)
texture = ExtResource("1_8vu8u")
hframes = 4

[node name="LogoText" type="Sprite2D" parent="CenterContainer/VBoxContainer"]
position = Vector2(-6, 123)
scale = Vector2(4, 4)
texture = ExtResource("2_84nkt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
